target/generated-sources/antlr/com/puppycrawl/tools/checkstyle/grammar/javadoc/JavadocCommentsParser.java
// Generated from com/puppycrawl/tools/checkstyle/grammar/javadoc/JavadocCommentsParser.g4 by ANTLR 4.13.2
package com.puppycrawl.tools.checkstyle.grammar.javadoc;

import java.util.Set;
import java.util.stream.Collectors;
import com.puppycrawl.tools.checkstyle.grammar.JavadocCommentsParserUtil;
import com.puppycrawl.tools.checkstyle.grammar.SimpleToken;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class JavadocCommentsParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		JAVADOC=1, LEADING_ASTERISK=2, NEWLINE=3, TEXT=4, WS=5, JAVADOC_INLINE_TAG=6, 
		JAVADOC_INLINE_TAG_START=7, JAVADOC_INLINE_TAG_END=8, CODE=9, LINK=10, 
		IDENTIFIER=11, HASH=12, LPAREN=13, RPAREN=14, COMMA=15, LINKPLAIN=16, 
		AUTHOR=17, DEPRECATED=18, RETURN=19, PARAM=20, TAG_OPEN=21, TAG_CLOSE=22, 
		TAG_SLASH_CLOSE=23, TAG_SLASH=24, EQUALS=25, TAG_NAME=26, ATTRIBUTE_VALUE=27, 
		SLASH=28, PARAMETER_TYPE=29, LT=30, GT=31, EXTENDS=32, SUPER=33, QUESTION=34, 
		VALUE=35, FORMAT_SPECIFIER=36, INHERIT_DOC=37, SUMMARY=38, SYSTEM_PROPERTY=39, 
		INDEX=40, INDEX_TERM=41, SNIPPET=42, SNIPPET_ATTR_NAME=43, COLON=44, EXCEPTION=45, 
		THROWS=46, PARAMETER_NAME=47, SINCE=48, VERSION=49, SEE=50, STRING_LITERAL=51, 
		LITERAL_HIDDEN=52, SERIAL=53, SERIAL_DATA=54, SERIAL_FIELD=55, FIELD_TYPE=56, 
		AT_SIGN=57, UNUSED_TOKEN1=58, REFERENCE=59, MEMBER_REFERENCE=60, PARAMETER_TYPE_LIST=61, 
		TYPE_ARGUMENTS=62, TYPE_ARGUMENT=63, DESCRIPTION=64, SNIPPET_ATTRIBUTES=65, 
		SNIPPET_ATTRIBUTE=66, SNIPPET_BODY=67, HTML_ELEMENT=68, VOID_ELEMENT=69, 
		HTML_CONTENT=70, HTML_TAG_START=71, HTML_TAG_END=72, HTML_ATTRIBUTES=73, 
		HTML_ATTRIBUTE=74, JAVADOC_BLOCK_TAG=75, CODE_INLINE_TAG=76, LINK_INLINE_TAG=77, 
		LINKPLAIN_INLINE_TAG=78, VALUE_INLINE_TAG=79, INHERIT_DOC_INLINE_TAG=80, 
		SUMMARY_INLINE_TAG=81, SYSTEM_PROPERTY_INLINE_TAG=82, INDEX_INLINE_TAG=83, 
		RETURN_INLINE_TAG=84, LITERAL_INLINE_TAG=85, SNIPPET_INLINE_TAG=86, CUSTOM_INLINE_TAG=87, 
		AUTHOR_BLOCK_TAG=88, DEPRECATED_BLOCK_TAG=89, RETURN_BLOCK_TAG=90, PARAM_BLOCK_TAG=91, 
		EXCEPTION_BLOCK_TAG=92, THROWS_BLOCK_TAG=93, SINCE_BLOCK_TAG=94, VERSION_BLOCK_TAG=95, 
		SEE_BLOCK_TAG=96, HIDDEN_BLOCK_TAG=97, USES_BLOCK_TAG=98, PROVIDES_BLOCK_TAG=99, 
		SERIAL_BLOCK_TAG=100, SERIAL_DATA_BLOCK_TAG=101, SERIAL_FIELD_BLOCK_TAG=102, 
		CUSTOM_BLOCK_TAG=103, HTML_COMMENT_START=104, HTML_COMMENT_END=105, HTML_COMMENT=106, 
		HTML_COMMENT_CONTENT=107, USES=108, PROVIDES=109, LITERAL=110, CUSTOM_NAME=111, 
		Snippet_ATTRIBUTE=112, See_TAG_OPEN=113, TAG_ATTR_NAME=114, ATTRIBUTE=115, 
		Link_COMMA=116;
	public static final int
		RULE_javadoc = 0, RULE_mainDescription = 1, RULE_blockTag = 2, RULE_authorTag = 3, 
		RULE_deprecatedTag = 4, RULE_returnTag = 5, RULE_parameterTag = 6, RULE_throwsTag = 7, 
		RULE_exceptionTag = 8, RULE_sinceTag = 9, RULE_versionTag = 10, RULE_seeTag = 11, 
		RULE_hiddenTag = 12, RULE_usesTag = 13, RULE_providesTag = 14, RULE_serialTag = 15, 
		RULE_serialDataTag = 16, RULE_serialFieldTag = 17, RULE_customBlockTag = 18, 
		RULE_inlineTag = 19, RULE_inlineTagContent = 20, RULE_codeInlineTag = 21, 
		RULE_linkPlainInlineTag = 22, RULE_linkInlineTag = 23, RULE_valueInlineTag = 24, 
		RULE_inheritDocInlineTag = 25, RULE_summaryInlineTag = 26, RULE_systemPropertyInlineTag = 27, 
		RULE_indexInlineTag = 28, RULE_returnInlineTag = 29, RULE_literalInlineTag = 30, 
		RULE_snippetInlineTag = 31, RULE_customInlineTag = 32, RULE_reference = 33, 
		RULE_typeName = 34, RULE_qualifiedName = 35, RULE_typeArguments = 36, 
		RULE_typeArgument = 37, RULE_memberReference = 38, RULE_parameterTypeList = 39, 
		RULE_snippetAttribute = 40, RULE_snippetBody = 41, RULE_description = 42, 
		RULE_htmlElement = 43, RULE_voidElement = 44, RULE_tightElement = 45, 
		RULE_nonTightElement = 46, RULE_selfClosingElement = 47, RULE_htmlTagStart = 48, 
		RULE_htmlTagEnd = 49, RULE_htmlAttribute = 50, RULE_htmlContent = 51, 
		RULE_nonTightHtmlContent = 52, RULE_htmlComment = 53, RULE_htmlCommentContent = 54;
	private static String[] makeRuleNames() {
		return new String[] {
			"javadoc", "mainDescription", "blockTag", "authorTag", "deprecatedTag", 
			"returnTag", "parameterTag", "throwsTag", "exceptionTag", "sinceTag", 
			"versionTag", "seeTag", "hiddenTag", "usesTag", "providesTag", "serialTag", 
			"serialDataTag", "serialFieldTag", "customBlockTag", "inlineTag", "inlineTagContent", 
			"codeInlineTag", "linkPlainInlineTag", "linkInlineTag", "valueInlineTag", 
			"inheritDocInlineTag", "summaryInlineTag", "systemPropertyInlineTag", 
			"indexInlineTag", "returnInlineTag", "literalInlineTag", "snippetInlineTag", 
			"customInlineTag", "reference", "typeName", "qualifiedName", "typeArguments", 
			"typeArgument", "memberReference", "parameterTypeList", "snippetAttribute", 
			"snippetBody", "description", "htmlElement", "voidElement", "tightElement", 
			"nonTightElement", "selfClosingElement", "htmlTagStart", "htmlTagEnd", 
			"htmlAttribute", "htmlContent", "nonTightHtmlContent", "htmlComment", 
			"htmlCommentContent"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, "'code'", "'link'", 
			null, null, "'('", "')'", null, "'linkplain'", "'author'", "'deprecated'", 
			"'return'", "'param'", "'<'", null, null, null, "'='", null, null, null, 
			null, null, "'>'", "'extends'", "'super'", "'?'", "'value'", null, "'inheritDoc'", 
			"'summary'", "'systemProperty'", "'index'", null, "'snippet'", null, 
			"':'", "'exception'", "'throws'", null, "'since'", "'version'", null, 
			null, "'hidden'", "'serial'", "'serialData'", "'serialField'", null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, "'<!--'", 
			"'-->'", null, null, "'uses'", "'provides'", "'literal'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "JAVADOC", "LEADING_ASTERISK", "NEWLINE", "TEXT", "WS", "JAVADOC_INLINE_TAG", 
			"JAVADOC_INLINE_TAG_START", "JAVADOC_INLINE_TAG_END", "CODE", "LINK", 
			"IDENTIFIER", "HASH", "LPAREN", "RPAREN", "COMMA", "LINKPLAIN", "AUTHOR", 
			"DEPRECATED", "RETURN", "PARAM", "TAG_OPEN", "TAG_CLOSE", "TAG_SLASH_CLOSE", 
			"TAG_SLASH", "EQUALS", "TAG_NAME", "ATTRIBUTE_VALUE", "SLASH", "PARAMETER_TYPE", 
			"LT", "GT", "EXTENDS", "SUPER", "QUESTION", "VALUE", "FORMAT_SPECIFIER", 
			"INHERIT_DOC", "SUMMARY", "SYSTEM_PROPERTY", "INDEX", "INDEX_TERM", "SNIPPET", 
			"SNIPPET_ATTR_NAME", "COLON", "EXCEPTION", "THROWS", "PARAMETER_NAME", 
			"SINCE", "VERSION", "SEE", "STRING_LITERAL", "LITERAL_HIDDEN", "SERIAL", 
			"SERIAL_DATA", "SERIAL_FIELD", "FIELD_TYPE", "AT_SIGN", "UNUSED_TOKEN1", 
			"REFERENCE", "MEMBER_REFERENCE", "PARAMETER_TYPE_LIST", "TYPE_ARGUMENTS", 
			"TYPE_ARGUMENT", "DESCRIPTION", "SNIPPET_ATTRIBUTES", "SNIPPET_ATTRIBUTE", 
			"SNIPPET_BODY", "HTML_ELEMENT", "VOID_ELEMENT", "HTML_CONTENT", "HTML_TAG_START", 
			"HTML_TAG_END", "HTML_ATTRIBUTES", "HTML_ATTRIBUTE", "JAVADOC_BLOCK_TAG", 
			"CODE_INLINE_TAG", "LINK_INLINE_TAG", "LINKPLAIN_INLINE_TAG", "VALUE_INLINE_TAG", 
			"INHERIT_DOC_INLINE_TAG", "SUMMARY_INLINE_TAG", "SYSTEM_PROPERTY_INLINE_TAG", 
			"INDEX_INLINE_TAG", "RETURN_INLINE_TAG", "LITERAL_INLINE_TAG", "SNIPPET_INLINE_TAG", 
			"CUSTOM_INLINE_TAG", "AUTHOR_BLOCK_TAG", "DEPRECATED_BLOCK_TAG", "RETURN_BLOCK_TAG", 
			"PARAM_BLOCK_TAG", "EXCEPTION_BLOCK_TAG", "THROWS_BLOCK_TAG", "SINCE_BLOCK_TAG", 
			"VERSION_BLOCK_TAG", "SEE_BLOCK_TAG", "HIDDEN_BLOCK_TAG", "USES_BLOCK_TAG", 
			"PROVIDES_BLOCK_TAG", "SERIAL_BLOCK_TAG", "SERIAL_DATA_BLOCK_TAG", "SERIAL_FIELD_BLOCK_TAG", 
			"CUSTOM_BLOCK_TAG", "HTML_COMMENT_START", "HTML_COMMENT_END", "HTML_COMMENT", 
			"HTML_COMMENT_CONTENT", "USES", "PROVIDES", "LITERAL", "CUSTOM_NAME", 
			"Snippet_ATTRIBUTE", "See_TAG_OPEN", "TAG_ATTR_NAME", "ATTRIBUTE", "Link_COMMA"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "JavadocCommentsParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	    private static final Set<String> VOID_TAGS = Set.of(
	        "area", "base", "basefont", "br", "col", "frame", "hr",
	        "img", "input", "isindex", "link", "meta", "param"
	    );

	    private Set<SimpleToken> unclosedTagNameTokens;

	    public boolean isVoidTag() {
	        String tagName = _input.LT(2).getText();
	        return VOID_TAGS.contains(tagName.toLowerCase());
	    }

	    public JavadocCommentsParser(CommonTokenStream tokens, Set<SimpleToken> unclosed) {
	        super(tokens);
	        _interp = new ParserATNSimulator(
	            this,
	            _ATN,
	            _decisionToDFA,
	            _sharedContextCache
	        );
	        this.unclosedTagNameTokens = unclosed;
	    }

	public JavadocCommentsParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class JavadocContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(JavadocCommentsParser.EOF, 0); }
		public MainDescriptionContext mainDescription() {
			return getRuleContext(MainDescriptionContext.class,0);
		}
		public List<BlockTagContext> blockTag() {
			return getRuleContexts(BlockTagContext.class);
		}
		public BlockTagContext blockTag(int i) {
			return getRuleContext(BlockTagContext.class,i);
		}
		public JavadocContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_javadoc; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JavadocCommentsParserVisitor ) return ((JavadocCommentsParserVisitor<? extends T>)visitor).visitJavadoc(this);
			else return visitor.visitChildren(this);
		}
	}

	public final JavadocContext javadoc() throws RecognitionException {
		JavadocContext _localctx = new JavadocContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_javadoc);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(111);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				{
				setState(110);
				mainDescription();
				}
				break;
			}
			setState(116);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==AT_SIGN) {
				{
				{
				setState(113);
				blockTag();
				}
				}
				setState(118);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(119);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MainDescriptionContext extends ParserRuleContext {
		public List<TerminalNode> TEXT() { return getTokens(JavadocCommentsParser.TEXT); }
		public TerminalNode TEXT(int i) {
			return getToken(JavadocCommentsParser.TEXT, i);
		}
		public List<InlineTagContext> inlineTag() {
			return getRuleContexts(InlineTagContext.class);
		}
		public InlineTagContext inlineTag(int i) {
			return getRuleContext(InlineTagContext.class,i);
		}
		public List<HtmlElementContext> htmlElement() {
			return getRuleContexts(HtmlElementContext.class);
		}
		public HtmlElementContext htmlElement(int i) {
			return getRuleContext(HtmlElementContext.class,i);
		}
		public List<HtmlCommentContext> htmlComment() {
			return getRuleContexts(HtmlCommentContext.class);
		}
		public HtmlCommentContext htmlComment(int i) {
			return getRuleContext(HtmlCommentContext.class,i);
		}
		public MainDescriptionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mainDescription; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JavadocCommentsParserVisitor ) return ((JavadocCommentsParserVisitor<? extends T>)visitor).visitMainDescription(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MainDescriptionContext mainDescription() throws RecognitionException {
		MainDescriptionContext _localctx = new MainDescriptionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_mainDescription);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(125); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					setState(125);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
					case 1:
						{
						setState(121);
						match(TEXT);
						}
						break;
					case 2:
						{
						setState(122);
						inlineTag();
						}
						break;
					case 3:
						{
						setState(123);
						htmlElement();
						}
						break;
					case 4:
						{
						setState(124);
						htmlComment();
						}
						break;
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(127); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BlockTagContext extends ParserRuleContext {
		public AuthorTagContext authorTag() {
			return getRuleContext(AuthorTagContext.class,0);
		}
		public DeprecatedTagContext deprecatedTag() {
			return getRuleContext(DeprecatedTagContext.class,0);
		}
		public ReturnTagContext returnTag() {
			return getRuleContext(ReturnTagContext.class,0);
		}
		public ParameterTagContext parameterTag() {
			return getRuleContext(ParameterTagContext.class,0);
		}
		public ThrowsTagContext throwsTag() {
			return getRuleContext(ThrowsTagContext.class,0);
		}
		public ExceptionTagContext exceptionTag() {
			return getRuleContext(ExceptionTagContext.class,0);
		}
		public SinceTagContext sinceTag() {
			return getRuleContext(SinceTagContext.class,0);
		}
		public VersionTagContext versionTag() {
			return getRuleContext(VersionTagContext.class,0);
		}
		public SeeTagContext seeTag() {
			return getRuleContext(SeeTagContext.class,0);
		}
		public HiddenTagContext hiddenTag() {
			return getRuleContext(HiddenTagContext.class,0);
		}
		public UsesTagContext usesTag() {
			return getRuleContext(UsesTagContext.class,0);
		}
		public ProvidesTagContext providesTag() {
			return getRuleContext(ProvidesTagContext.class,0);
		}
		public SerialTagContext serialTag() {
			return getRuleContext(SerialTagContext.class,0);
		}
		public SerialDataTagContext serialDataTag() {
			return getRuleContext(SerialDataTagContext.class,0);
		}
		public SerialFieldTagContext serialFieldTag() {
			return getRuleContext(SerialFieldTagContext.class,0);
		}
		public CustomBlockTagContext customBlockTag() {
			return getRuleContext(CustomBlockTagContext.class,0);
		}
		public BlockTagContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_blockTag; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JavadocCommentsParserVisitor ) return ((JavadocCommentsParserVisitor<? extends T>)visitor).visitBlockTag(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BlockTagContext blockTag() throws RecognitionException {
		BlockTagContext _localctx = new BlockTagContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_blockTag);
		try {
			setState(145);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(129);
				authorTag();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(130);
				deprecatedTag();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(131);
				returnTag();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(132);
				parameterTag();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(133);
				throwsTag();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(134);
				exceptionTag();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(135);
				sinceTag();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(136);
				versionTag();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(137);
				seeTag();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(138);
				hiddenTag();
				}
				break;
			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(139);
				usesTag();
				}
				break;
			case 12:
				enterOuterAlt(_localctx, 12);
				{
				setState(140);
				providesTag();
				}
				break;
			case 13:
				enterOuterAlt(_localctx, 13);
				{
				setState(141);
				serialTag();
				}
				break;
			case 14:
				enterOuterAlt(_localctx, 14);
				{
				setState(142);
				serialDataTag();
				}
				break;
			case 15:
				enterOuterAlt(_localctx, 15);
				{
				setState(143);
				serialFieldTag();
				}
				break;
			case 16:
				enterOuterAlt(_localctx, 16);
				{
				setState(144);
				customBlockTag();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AuthorTagContext extends ParserRuleContext {
		public Token tagName;
		public TerminalNode AT_SIGN() { return getToken(JavadocCommentsParser.AT_SIGN, 0); }
		public TerminalNode AUTHOR() { return getToken(JavadocCommentsParser.AUTHOR, 0); }
		public DescriptionContext description() {
			return getRuleContext(DescriptionContext.class,0);
		}
		public AuthorTagContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_authorTag; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JavadocCommentsParserVisitor ) return ((JavadocCommentsParserVisitor<? extends T>)visitor).visitAuthorTag(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AuthorTagContext authorTag() throws RecognitionException {
		AuthorTagContext _localctx = new AuthorTagContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_authorTag);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(147);
			match(AT_SIGN);
			setState(148);
			((AuthorTagContext)_localctx).tagName = match(AUTHOR);
			setState(150);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				{
				setState(149);
				description();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeprecatedTagContext extends ParserRuleContext {
		public Token tagName;
		public TerminalNode AT_SIGN() { return getToken(JavadocCommentsParser.AT_SIGN, 0); }
		public TerminalNode DEPRECATED() { return getToken(JavadocCommentsParser.DEPRECATED, 0); }
		public DescriptionContext description() {
			return getRuleContext(DescriptionContext.class,0);
		}
		public DeprecatedTagContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_deprecatedTag; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JavadocCommentsParserVisitor ) return ((JavadocCommentsParserVisitor<? extends T>)visitor).visitDeprecatedTag(this);
			else return visitor.visitChildren(this);
		}
	}
